--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.17",
+    "@tanstack/react-query": "^5.90.10",
     "axios": "^1.13.2",
     "firebase": "^12.6.0",
     "react": "^19.2.0",
@@ -18,8 +19,10 @@
     "react-hook-form": "^7.66.0",
     "react-icons": "^5.5.0",
     "react-leaflet": "^5.0.0-rc.2",
+    "react-lottie": "^1.2.10",
     "react-responsive-carousel": "^3.2.23",
     "react-router": "^7.9.6",
+    "sweetalert2": "^11.26.3",
     "swiper": "^12.0.3",
     "tailwindcss": "^4.1.17"
   },
